# parallaxe-groundwater-france-trends

./: .gitignore  LICENSE  README.md  pyproject.toml
data/processed/mapping/: bdlisa_polyg_affleurant_nv1_2005_2025.csv  network70_affleurant_nv1_agg_2005_2025.csv  network70_station_to_polyg_affleurant_nv1_2005_2025.csv
data/processed/station_trends/: network70_station_annual_means_2005_2025.csv  network70_station_trends_2005_2025.csv
data/raw/: sample_groundwater_timeseries.csv
scripts/: 00_fetch_hubeau_to_duckdb.py  01_compute_stations_trends.py  02_generate_maps.py
src/groundwater_france_trends/: config.py  utils.py
